feat: add validation for manager, fix lombox and mapstruct conflicting

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,3 +2,17 @@ manager.read.success=Read manager successfully
 manager.create.success=Create manager successfully
 manager.update.success=Update manager successfully
 manager.delete.success=Delete manager successfully
+
+# RequestParam Validation
+requestParam.invalid.offset=Invalid offset value
+requestParam.invalid.limit=Invalid limit value
+
+# Validation
+validation.id.notBlank=ID must not be blank
+validation.username.notBlank=Username must not be blank
+validation.email.notBlank=Email must not be blank
+validation.email.invalidFormat=Email must be correct format
+validation.password.notBlank=Password must not be blank
+
+# Manager Validation
+validation.managerId.notNull=Manager's ID must not be blank
