feat: add base house functions for api, application and domain

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,3 +16,8 @@ validation.password.notBlank=Password must not be blank
 
 # Manager Validation
 validation.managerId.notNull=Manager's ID must not be blank
+
+# House Validation
+validation.houseId.notNull=House's ID must be not null
+validation.houseId.notBlank=House's ID must be not blank
+validation.houseName.notBlank=House's name must not be blank
