feat: add base Room functions for api, application and domain

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -21,3 +21,8 @@ validation.managerId.notNull=Manager's ID must not be blank
 validation.houseId.notNull=House's ID must be not null
 validation.houseId.notBlank=House's ID must be not blank
 validation.houseName.notBlank=House's name must not be blank
+
+# Room Validation
+validation.roomId.notNull=Room's ID must be not null
+validation.roomNumber.notBlank=Room's number must be not blank
+validation.rentPaymentStatus.notBlank=Rent payment status must be not blank
