feat: add base Contract functions for API, application, domain

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,3 +26,12 @@ validation.houseName.notBlank=House's name must not be blank
 validation.roomId.notNull=Room's ID must be not null
 validation.roomNumber.notBlank=Room's number must be not blank
 validation.rentPaymentStatus.notBlank=Rent payment status must be not blank
+
+# Contract Validation
+validation.contractId.notBlank=Contract's ID must be not blank
+validation.peopleQuantity.notBlank=Contract's people quantity must be not blank
+validation.peopleQuantity.notSmallerThanOne=Contract's people quantity must be bigger or equal 1
+validation.rentPrice.notBlank=Contract's rent price must be not blank
+validation.rentPrice.notNegative=Contract's rent price must be not negative
+validation.signingDate.notInPast=Contract's signing date must be today or later
+validation.expirationDate.notInPast=Contract's expiration date must be today or later
