feat: add base RoomAmenity funcitons for API, application and domain

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -27,6 +27,11 @@ validation.roomId.notNull=Room's ID must be not null
 validation.roomNumber.notBlank=Room's number must be not blank
 validation.rentPaymentStatus.notBlank=Rent payment status must be not blank
 
+# RoomAmenity Validation
+validation.roomAmenityId.notBlank=Room Amenity's ID must be not blank
+validation.roomAmenityType.notBlank=Room Amenity's type must be not blank
+validation.roomAmenityName.notBlank=Room Amenity's type name must be not blank
+
 # Contract Validation
 validation.contractId.notBlank=Contract's ID must be not blank
 validation.peopleQuantity.notBlank=Contract's people quantity must be not blank
