feat: add base Vehicle functions for API, application, domain

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -40,3 +40,7 @@ validation.rentPrice.notBlank=Contract's rent price must be not blank
 validation.rentPrice.notNegative=Contract's rent price must be not negative
 validation.signingDate.notInPast=Contract's signing date must be today or later
 validation.expirationDate.notInPast=Contract's expiration date must be today or later
+
+# Vehicle Validation
+validation.vehicleId.notBlank=Vehicle's ID must be not blank
+validation.vehicleType.notBlank=Vehicle's type must be not blank
