feat: add base Interior for API, application, domain

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -44,3 +44,7 @@ validation.expirationDate.notInPast=Contract's expiration date must be today or 
 # Vehicle Validation
 validation.vehicleId.notBlank=Vehicle's ID must be not blank
 validation.vehicleType.notBlank=Vehicle's type must be not blank
+
+# Interior Validation
+validation.interiorId.notBlank=Interior's ID must be not blank
+validation.interiorName.notBlank=Interior's name must be not blank
