feat: add base RentPayment for API, application, domain

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,9 +13,12 @@ validation.username.notBlank=Username must not be blank
 validation.email.notBlank=Email must not be blank
 validation.email.invalidFormat=Email must be correct format
 validation.password.notBlank=Password must not be blank
+validation.onlyBooleanAllowed=Invalid boolean value. Only 'true' or 'false' are allowed
+validation.invalidRequestFormat=Invalid request format
 
 # Manager Validation
-validation.managerId.notNull=Manager's ID must not be blank
+validation.managerId.notBlank=Manager's ID must not be blank
+validation.managerId.notNull=Manager's ID must not be null
 
 # House Validation
 validation.houseId.notNull=House's ID must be not null
@@ -48,3 +51,9 @@ validation.vehicleType.notBlank=Vehicle's type must be not blank
 # Interior Validation
 validation.interiorId.notBlank=Interior's ID must be not blank
 validation.interiorName.notBlank=Interior's name must be not blank
+
+# RentPayment Validation
+validation.rentPaymentId.notBlank=RentPayment's ID must not be blank
+validation.totalPrice.notNegative=RentPayment's total price must not be negative
+validation.totalPrice.notNull=RentPayment's total price must not be null
+validation.isPaid.notNull=RentPayment's isPaid must be not null
