feat: add base RepairRoomLog for API, application, domain

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -57,3 +57,8 @@ validation.rentPaymentId.notBlank=RentPayment's ID must not be blank
 validation.totalPrice.notNegative=RentPayment's total price must not be negative
 validation.totalPrice.notNull=RentPayment's total price must not be null
 validation.isPaid.notNull=RentPayment's isPaid must be not null
+
+# RepairRoomLog Validation
+validation.repairRoomLogId.notBlank=Repair room log's ID must be not blank
+validation.repairType.notBlank=Repair type must be not blank
+validation.repairCost.notNegative=Repair's cost must be not negative
