feat: add Room belonged to House deletion function

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,7 +7,7 @@ manager.delete.success=Delete manager successfully
 requestParam.invalid.offset=Invalid offset value
 requestParam.invalid.limit=Invalid limit value
 
-# Validation
+# General Validation
 validation.id.notBlank=ID must not be blank
 validation.username.notBlank=Username must not be blank
 validation.email.notBlank=Email must not be blank
@@ -62,3 +62,17 @@ validation.isPaid.notNull=RentPayment's isPaid must be not null
 validation.repairRoomLogId.notBlank=Repair room log's ID must be not blank
 validation.repairType.notBlank=Repair type must be not blank
 validation.repairCost.notNegative=Repair's cost must be not negative
+
+# General Exception
+
+#House Exception
+exception.house.notFound=House not found
+exception.roomBelongedToHouse.notFound=Can't find room in the house
+
+# Room Exception
+exception.room.notFound=Room not found
+
+# General Successful Response
+
+# Room's Successful Response
+delete.roomFromHouse.success=Room deleted successfully
