feat: add contract and room relationship, related deletion function

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -72,7 +72,9 @@ exception.roomBelongedToHouse.notFound=Can't find room in the house
 # Room Exception
 exception.room.notFound=Room not found
 
-# General Successful Response
+# Contract Exception
+exception.contractFromRoom.notFound=Contract not found from Room
 
-# Room's Successful Response
+# General Successful Response
 delete.roomFromHouse.success=Room deleted successfully
+delete.contractFromRoom.success=Contract belonged to Room deleted successfully
