feat: add contract has room amenities related functions

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -44,6 +44,10 @@ validation.rentPrice.notNegative=Contract's rent price must be not negative
 validation.signingDate.notInPast=Contract's signing date must be today or later
 validation.expirationDate.notInPast=Contract's expiration date must be today or later
 
+# ContractRoomAmenity Validation
+validation.roomAmenityPrice.notNegative=Room's rent price must be not negative
+validation.roomAmenityPrice.notNull=Room's rent price must be not null
+
 # Vehicle Validation
 validation.vehicleId.notBlank=Vehicle's ID must be not blank
 validation.vehicleType.notBlank=Vehicle's type must be not blank
@@ -73,7 +77,11 @@ exception.roomBelongedToHouse.notFound=Can't find room in the house
 exception.room.notFound=Room not found
 
 # Contract Exception
+exception.contract.notFound=Contract not found
 exception.contractFromRoom.notFound=Contract not found from Room
+
+# RoomAmenity Exception
+exception.roomAmenity.notFound=Room amenity not found
 
 # General Successful Response
 delete.roomFromHouse.success=Room deleted successfully
