feat: add insert, update, delete functions for contract-interior

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -48,6 +48,10 @@ validation.expirationDate.notInPast=Contract's expiration date must be today or 
 validation.roomAmenityPrice.notNegative=Room's rent price must be not negative
 validation.roomAmenityPrice.notNull=Room's rent price must be not null
 
+# ContractInterior Validation
+validation.oldContractID.notBlank=Old Contract's ID must not be blank
+validation.oldInteriorID.notBlank=Old Interior's ID must not be blank
+
 # Vehicle Validation
 validation.vehicleId.notBlank=Vehicle's ID must be not blank
 validation.vehicleType.notBlank=Vehicle's type must be not blank
@@ -83,6 +87,10 @@ exception.contractFromRoom.notFound=Contract not found from Room
 # RoomAmenity Exception
 exception.roomAmenity.notFound=Room amenity not found
 
+# ContractInterior Exception
+exception.contractInterior.notFound=ContractInterior not found
+
 # General Successful Response
 delete.roomFromHouse.success=Room deleted successfully
 delete.contractFromRoom.success=Contract belonged to Room deleted successfully
+delete.contractInterior.success=ContractInterior deleted successfully
