feat: add CRUD for contract has vehicles relationship

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -37,6 +37,7 @@ validation.roomAmenityName.notBlank=Room Amenity's type name must be not blank
 
 # Contract Validation
 validation.contractId.notBlank=Contract's ID must be not blank
+validation.oldContractId.notBlank=Old Contract's ID must be not blank
 validation.peopleQuantity.notBlank=Contract's people quantity must be not blank
 validation.peopleQuantity.notSmallerThanOne=Contract's people quantity must be bigger or equal 1
 validation.rentPrice.notBlank=Contract's rent price must be not blank
@@ -54,6 +55,7 @@ validation.oldInteriorID.notBlank=Old Interior's ID must not be blank
 
 # Vehicle Validation
 validation.vehicleId.notBlank=Vehicle's ID must be not blank
+validation.oldVehicleId.notBlank=Old Vehicle's ID must be not blank
 validation.vehicleType.notBlank=Vehicle's type must be not blank
 
 # Interior Validation
@@ -90,7 +92,14 @@ exception.roomAmenity.notFound=Room amenity not found
 # ContractInterior Exception
 exception.contractInterior.notFound=ContractInterior not found
 
+# Vehicle Exception
+exception.vehicle.notFound=Vehicle not found
+
+# ContractVehicle Exception
+exception.contractVehicle.notFound=ContractVehicle not found
+
 # General Successful Response
 delete.roomFromHouse.success=Room deleted successfully
 delete.contractFromRoom.success=Contract belonged to Room deleted successfully
 delete.contractInterior.success=ContractInterior deleted successfully
+delete.contractVehicle.success=ContractVehicle deleted successfully
