feat: add base Role for api, application, domain

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -73,6 +73,11 @@ validation.repairRoomLogId.notBlank=Repair room log's ID must be not blank
 validation.repairType.notBlank=Repair type must be not blank
 validation.repairCost.notNegative=Repair's cost must be not negative
 
+# Role Validation
+validation.roleId.notBlank=Role's ID must be not blank
+validation.roleName.notBlank=Role's name must be not blank
+validation.roleDescription.notBlank=Role's description must be not blank
+
 # General Exception
 
 #House Exception
