feat: add base Permission for api, application, domain

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -78,6 +78,11 @@ validation.roleId.notBlank=Role's ID must be not blank
 validation.roleName.notBlank=Role's name must be not blank
 validation.roleDescription.notBlank=Role's description must be not blank
 
+# Permission Validation
+validation.permissionId.notNull=Permission's ID must be not null
+validation.permissionName.notBlank=Permission's name must be not blank
+validation.permissionDescription.notBlank=Permission's description must be not blank
+
 # General Exception
 
 #House Exception
