feat: add CRUD for Role has Permission relationship

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -75,17 +75,28 @@ validation.repairCost.notNegative=Repair's cost must be not negative
 
 # Role Validation
 validation.roleId.notBlank=Role's ID must be not blank
+validation.oldRoleId.notNull=Old Role's ID must be not null
 validation.roleName.notBlank=Role's name must be not blank
 validation.roleDescription.notBlank=Role's description must be not blank
 
 # Permission Validation
 validation.permissionId.notNull=Permission's ID must be not null
+validation.oldPermissionId.notNull=Old Permission's ID must be not null
 validation.permissionName.notBlank=Permission's name must be not blank
 validation.permissionDescription.notBlank=Permission's description must be not blank
 
 # General Exception
 
-#House Exception
+# Role Exception
+exception.role.notFound=Role not found
+
+# Permission Exception
+exception.permission.notFound=Permission not found
+
+# RolePermission Exception
+exception.rolePermission.notFound=RolePermission not found
+
+# House Exception
 exception.house.notFound=House not found
 exception.roomBelongedToHouse.notFound=Can't find room in the house
 
@@ -113,3 +124,5 @@ delete.roomFromHouse.success=Room deleted successfully
 delete.contractFromRoom.success=Contract belonged to Room deleted successfully
 delete.contractInterior.success=ContractInterior deleted successfully
 delete.contractVehicle.success=ContractVehicle deleted successfully
+delete.rolePermission.success=RolePermission deleted successfully
+get.rolePermission.success=Get RolePermission successfully
