feat: add CRUD for Manager supervise House relationship

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,6 +25,10 @@ validation.houseId.notNull=House's ID must be not null
 validation.houseId.notBlank=House's ID must be not blank
 validation.houseName.notBlank=House's name must not be blank
 
+# ManagerHouse Validation
+validation.oldManagerId.notBlank=Old Manager's ID must be not blank
+validation.oldHouseId.notBlank=Old House's ID must be not blank
+
 # Room Validation
 validation.roomId.notNull=Room's ID must be not null
 validation.roomNumber.notBlank=Room's number must be not blank
@@ -96,9 +100,16 @@ exception.permission.notFound=Permission not found
 # RolePermission Exception
 exception.rolePermission.notFound=RolePermission not found
 
+# Manager Exception
+exception.manager.notFound=Manager not found
+
 # House Exception
 exception.house.notFound=House not found
 exception.roomBelongedToHouse.notFound=Can't find room in the house
+
+# ManagerHouse Exception
+exception.managerHouse.notFound=ManagerHouse not found
+exception.managerHouse.alreadyExisted=ManagerHouse already existed
 
 # Room Exception
 exception.room.notFound=Room not found
@@ -125,4 +136,6 @@ delete.contractFromRoom.success=Contract belonged to Room deleted successfully
 delete.contractInterior.success=ContractInterior deleted successfully
 delete.contractVehicle.success=ContractVehicle deleted successfully
 delete.rolePermission.success=RolePermission deleted successfully
+delete.managerHouse.success=ManagerHouse deleted successfully
 get.rolePermission.success=Get RolePermission successfully
+get.managerHouse.success=GEt ManagerHouse successfully
