feat: add Manager has Role relationship

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -79,6 +79,8 @@ validation.repairCost.notNegative=Repair's cost must be not negative
 
 # Role Validation
 validation.roleId.notBlank=Role's ID must be not blank
+validation.roleId.notNull=Role's ID must be not null
+validation.roleId.notValidValue=Role' ID must be valid value
 validation.oldRoleId.notNull=Old Role's ID must be not null
 validation.roleName.notBlank=Role's name must be not blank
 validation.roleDescription.notBlank=Role's description must be not blank
@@ -93,6 +95,7 @@ validation.permissionDescription.notBlank=Permission's description must be not b
 
 # Role Exception
 exception.role.notFound=Role not found
+exception.roleName.duplicated=Role's name already existed
 
 # Permission Exception
 exception.permission.notFound=Permission not found
@@ -102,6 +105,8 @@ exception.rolePermission.notFound=RolePermission not found
 
 # Manager Exception
 exception.manager.notFound=Manager not found
+exception.managerUsername.duplicated=Manager's username already existed
+exception.managerEmail.duplicated=Manager's email already existed
 
 # House Exception
 exception.house.notFound=House not found
