feat: add JWT authentication

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -105,6 +105,7 @@ exception.rolePermission.notFound=RolePermission not found
 
 # Manager Exception
 exception.manager.notFound=Manager not found
+exception.managerUsername.notFound=Manager's username not found
 exception.managerUsername.duplicated=Manager's username already existed
 exception.managerEmail.duplicated=Manager's email already existed
 
@@ -136,6 +137,7 @@ exception.vehicle.notFound=Vehicle not found
 exception.contractVehicle.notFound=ContractVehicle not found
 
 # General Successful Response
+login.success=Login successfully
 delete.roomFromHouse.success=Room deleted successfully
 delete.contractFromRoom.success=Contract belonged to Room deleted successfully
 delete.contractInterior.success=ContractInterior deleted successfully
@@ -143,4 +145,4 @@ delete.contractVehicle.success=ContractVehicle deleted successfully
 delete.rolePermission.success=RolePermission deleted successfully
 delete.managerHouse.success=ManagerHouse deleted successfully
 get.rolePermission.success=Get RolePermission successfully
-get.managerHouse.success=GEt ManagerHouse successfully
+get.managerHouse.success=Get ManagerHouse successfully
