feat: add base authorization and authorization for House

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -92,6 +92,7 @@ validation.permissionName.notBlank=Permission's name must be not blank
 validation.permissionDescription.notBlank=Permission's description must be not blank
 
 # General Exception
+exception.notEnoughPrivilege=You don't have privilege to perform this action
 
 # Role Exception
 exception.role.notFound=Role not found
@@ -112,6 +113,7 @@ exception.managerEmail.duplicated=Manager's email already existed
 # House Exception
 exception.house.notFound=House not found
 exception.roomBelongedToHouse.notFound=Can't find room in the house
+exception.houseNotSupervisedByManager=House's not supervised by Manager
 
 # ManagerHouse Exception
 exception.managerHouse.notFound=ManagerHouse not found
