feat: add authorization for Room

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -121,6 +121,7 @@ exception.managerHouse.alreadyExisted=ManagerHouse already existed
 
 # Room Exception
 exception.room.notFound=Room not found
+exception.roomNotSupervisedByManager=Room's not supervised by Manager
 
 # Contract Exception
 exception.contract.notFound=Contract not found
