feat: add authorization for Contract

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -121,11 +121,13 @@ exception.managerHouse.alreadyExisted=ManagerHouse already existed
 
 # Room Exception
 exception.room.notFound=Room not found
+exception.roomId.notFound=Room's ID not found
 exception.roomNotSupervisedByManager=Room's not supervised by Manager
 
 # Contract Exception
 exception.contract.notFound=Contract not found
 exception.contractFromRoom.notFound=Contract not found from Room
+exception.contractNotManageableByManager=Contract's not manageable by Manager
 
 # RoomAmenity Exception
 exception.roomAmenity.notFound=Room amenity not found
