feat: add authorization for Manager

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -109,6 +109,7 @@ exception.manager.notFound=Manager not found
 exception.managerUsername.notFound=Manager's username not found
 exception.managerUsername.duplicated=Manager's username already existed
 exception.managerEmail.duplicated=Manager's email already existed
+exception.managerNotManagedByAuthUser=Manager's not managed by authenticated user
 
 # House Exception
 exception.house.notFound=House not found
