feat: add authorization for Role

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -97,6 +97,7 @@ exception.notEnoughPrivilege=You don't have privilege to perform this action
 # Role Exception
 exception.role.notFound=Role not found
 exception.roleName.duplicated=Role's name already existed
+exception.roleNotAccessibleByManager=Role's not accessible by authenticated user
 
 # Permission Exception
 exception.permission.notFound=Permission not found
