feat: add authorization for Permission

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -101,6 +101,8 @@ exception.roleNotAccessibleByManager=Role's not accessible by authenticated user
 
 # Permission Exception
 exception.permission.notFound=Permission not found
+exception.permissionNotAccessibleByAuthUser=Permission's not accessible by authenticated user
+exception.permissionName.existed=Permission's name already existed
 
 # RolePermission Exception
 exception.rolePermission.notFound=RolePermission not found
