feat: add authorization for Interior

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -136,6 +136,10 @@ exception.contractNotManageableByManager=Contract's not manageable by Manager
 # RoomAmenity Exception
 exception.roomAmenity.notFound=Room amenity not found
 
+# Interior Exception
+exception.interior.notFound=Interior not found
+exception.interiorName.existed=Interior's name already existed
+
 # ContractInterior Exception
 exception.contractInterior.notFound=ContractInterior not found
 
