feat: add authorization for RoomAmenity

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -135,6 +135,7 @@ exception.contractNotManageableByManager=Contract's not manageable by Manager
 
 # RoomAmenity Exception
 exception.roomAmenity.notFound=Room amenity not found
+exception.roomAmenityName.existed=RoomAmenity's name already existed
 
 # Interior Exception
 exception.interior.notFound=Interior not found
