feat: add authorization for RolePermission

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -106,6 +106,8 @@ exception.permissionName.existed=Permission's name already existed
 
 # RolePermission Exception
 exception.rolePermission.notFound=RolePermission not found
+exception.rolePermissionNotAccessibleByAuthUser=RolePermission's not accessible by authenticated user
+exception.rolePermission.existed=RolePermission already existed
 
 # Manager Exception
 exception.manager.notFound=Manager not found
