feat: add authorization for ContractInterior

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -145,6 +145,8 @@ exception.interiorName.existed=Interior's name already existed
 
 # ContractInterior Exception
 exception.contractInterior.notFound=ContractInterior not found
+exception.contractInteriorNotAccessibleByAuthUser=ContractInterior's not accessible by authenticated user
+exception.contractInterior.existed=ContractInterior already existed
 
 # Vehicle Exception
 exception.vehicle.notFound=Vehicle not found
@@ -162,3 +164,4 @@ delete.rolePermission.success=RolePermission deleted successfully
 delete.managerHouse.success=ManagerHouse deleted successfully
 get.rolePermission.success=Get RolePermission successfully
 get.managerHouse.success=Get ManagerHouse successfully
+get.contractInterior.success=Get ContractInterior successfully
