feat: add authorization for ContractRoomAmenity

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -154,6 +154,11 @@ exception.vehicle.notFound=Vehicle not found
 # ContractVehicle Exception
 exception.contractVehicle.notFound=ContractVehicle not found
 
+# ContractRoomAmenity Exception
+exception.contractRoomAmenity.notFound=ContractRoomAmenity not found
+exception.contractRoomAmenityNotAccessibleByAuthUser=ContractRoomAmenity's not accessible by authenticated user
+exception.contractRoomAmenity.existed=ContractRoomAmenity already existed
+
 # General Successful Response
 login.success=Login successfully
 delete.roomFromHouse.success=Room deleted successfully
@@ -162,6 +167,9 @@ delete.contractInterior.success=ContractInterior deleted successfully
 delete.contractVehicle.success=ContractVehicle deleted successfully
 delete.rolePermission.success=RolePermission deleted successfully
 delete.managerHouse.success=ManagerHouse deleted successfully
+delete.contractRoomAmenity.success=ContractRoomAmenity deleted successfully
+
 get.rolePermission.success=Get RolePermission successfully
 get.managerHouse.success=Get ManagerHouse successfully
 get.contractInterior.success=Get ContractInterior successfully
+get.contractRoomAmenity.success=Get ContractRoomAmenity successfully
