feat: add authorization for ContractVehicle

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -153,6 +153,8 @@ exception.vehicle.notFound=Vehicle not found
 
 # ContractVehicle Exception
 exception.contractVehicle.notFound=ContractVehicle not found
+exception.contractVehicleNotAccessibleByAuthUser=ContractVehicle's not accessible by authenticated user
+exception.contractVehicle.existed=ContractVehicle already existed
 
 # ContractRoomAmenity Exception
 exception.contractRoomAmenity.notFound=ContractRoomAmenity not found
@@ -173,3 +175,4 @@ get.rolePermission.success=Get RolePermission successfully
 get.managerHouse.success=Get ManagerHouse successfully
 get.contractInterior.success=Get ContractInterior successfully
 get.contractRoomAmenity.success=Get ContractRoomAmenity successfully
+get.contractVehicle.success=Get ContractVehicle successfully
